[package]
name = "custom_attrs"
description = "A library that allows you to configure values specific to each variants of an enum."
license = "MIT"
repository = "https://github.com/NovaliX-Dev/custom_attrs"
authors = ["NovaliX-Dev"]
version = "1.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = { version = "1.0.107", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.77"
